--- a/package.json
+++ b/package.json
@@ -21,43 +21,43 @@
     "url": "git://github.com/stacktracejs/stacktrace.js.git"
   },
   "dependencies": {
-    "error-stack-parser": "^1.3.6",
-    "stack-generator": "^1.0.7",
-    "stacktrace-gps": "^2.4.3"
+    "error-stack-parser": "1.3.6",
+    "stack-generator": "1.0.7",
+    "stacktrace-gps": "2.4.4"
   },
   "devDependencies": {
-    "browserify": "^13.1.0",
-    "colors": "^1.1.2",
-    "del": "^1.2.0",
-    "es6-promise": "^3.1.2",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-coveralls": "^0.1.4",
-    "gulp-jshint": "^1.12.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.5.1",
-    "jasmine": "^2.3.2",
-    "jasmine-ajax": "^3.2.0",
-    "jasmine-core": "^2.3.4",
-    "jscs": "^2.9.0",
-    "jsdoc-dash-template": "^1.2.0",
-    "json3": "^3.3.2",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-coverage": "^0.5.2",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-ie-launcher": "^0.2.0",
-    "karma-jasmine": "^0.3.6",
-    "karma-jasmine-ajax": "^0.1.13",
-    "karma-opera-launcher": "^0.3.0",
-    "karma-phantomjs2-launcher": "^0.3.2",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.2.14",
-    "karma-spec-reporter": "0.0.23",
-    "run-sequence": "^1.1.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "browserify": "13.1.0",
+    "colors": "1.1.2",
+    "del": "2.2.2",
+    "es6-promise": "4.0.3",
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.0",
+    "gulp-coveralls": "0.1.4",
+    "gulp-jshint": "2.0.1",
+    "gulp-rename": "1.2.2",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "2.0.0",
+    "jasmine": "2.5.2",
+    "jasmine-ajax": "3.2.0",
+    "jasmine-core": "2.5.2",
+    "jscs": "3.0.7",
+    "jsdoc-dash-template": "2.0.1",
+    "json3": "3.3.2",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-firefox-launcher": "1.0.0",
+    "karma-ie-launcher": "1.0.0",
+    "karma-jasmine": "1.0.2",
+    "karma-jasmine-ajax": "0.1.13",
+    "karma-opera-launcher": "1.0.0",
+    "karma-phantomjs2-launcher": "0.5.0",
+    "karma-safari-launcher": "1.0.0",
+    "karma-sauce-launcher": "1.0.0",
+    "karma-spec-reporter": "0.0.26",
+    "run-sequence": "1.2.2",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0"
   },
   "bugs": {
     "url": "https://github.com/stacktracejs/stacktrace.js/issues"
