--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "stacktrace-js",
   "description": "Framework-agnostic, micro-library for getting stack traces in all environments",
   "author": "Eric Wendelin <me@eriwen.com> (http://www.eriwen.com)",
-  "version": "0.6.4",
-  "keywords": ["stack-trace", "cross-browser", "framework-agnostic", "client", "browser"],
+  "version": "0.6.5-5",
+  "keywords": [
+    "stack-trace",
+    "cross-browser",
+    "framework-agnostic",
+    "client",
+    "browser"
+  ],
   "homepage": "http://stacktracejs.com",
   "repository": {
     "type": "git",
