--- a/package.json
+++ b/package.json
@@ -21,43 +21,45 @@
     "url": "git://github.com/stacktracejs/stacktrace.js.git"
   },
   "dependencies": {
-    "error-stack-parser": "1.3.6",
-    "stack-generator": "1.0.7",
-    "stacktrace-gps": "2.4.4"
+    "error-stack-parser": "2.0.2",
+    "stack-generator": "2.0.3",
+    "stacktrace-gps": "3.0.2"
   },
   "devDependencies": {
-    "browserify": "13.1.0",
-    "colors": "1.1.2",
-    "del": "2.2.2",
-    "es6-promise": "4.0.3",
-    "gulp": "3.9.1",
-    "gulp-concat": "2.6.0",
+    "browserify": "16.2.3",
+    "colors": "1.3.3",
+    "del": "4.1.1",
+    "es6-promise": "4.2.8",
+    "eslint": "^5.16.0",
+    "gulp": "4.0.2",
+    "gulp-concat": "2.6.1",
     "gulp-coveralls": "0.1.4",
-    "gulp-jshint": "2.0.1",
-    "gulp-rename": "1.2.2",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-uglify": "2.0.0",
-    "jasmine": "2.5.2",
-    "jasmine-ajax": "3.2.0",
-    "jasmine-core": "2.5.2",
+    "gulp-eslint": "5.0.0",
+    "gulp-rename": "1.4.0",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-uglify": "3.0.2",
+    "jasmine": "3.4.0",
+    "jasmine-ajax": "4.0.0",
+    "jasmine-core": "3.4.0",
     "jscs": "3.0.7",
     "jsdoc-dash-template": "2.0.1",
-    "json3": "3.3.2",
-    "karma": "1.3.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "1.1.1",
-    "karma-firefox-launcher": "1.0.0",
+    "json3": "3.3.3",
+    "karma": "4.1.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.2",
+    "karma-firefox-launcher": "1.1.0",
     "karma-ie-launcher": "1.0.0",
-    "karma-jasmine": "1.0.2",
+    "karma-jasmine": "2.0.1",
     "karma-jasmine-ajax": "0.1.13",
     "karma-opera-launcher": "1.0.0",
     "karma-phantomjs2-launcher": "0.5.0",
     "karma-safari-launcher": "1.0.0",
-    "karma-sauce-launcher": "1.0.0",
-    "karma-spec-reporter": "0.0.26",
-    "run-sequence": "1.2.2",
-    "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0"
+    "karma-sauce-launcher": "2.0.2",
+    "karma-spec-reporter": "0.0.32",
+    "prettier": "1.18.2",
+    "run-sequence": "2.2.1",
+    "vinyl-buffer": "1.0.1",
+    "vinyl-source-stream": "2.0.0"
   },
   "bugs": {
     "url": "https://github.com/stacktracejs/stacktrace.js/issues"
@@ -72,6 +74,11 @@
   ],
   "scripts": {
     "test": "gulp test",
-    "prepublish": "gulp dist"
+    "build": "gulp dist",
+    "lint": "eslint .",
+    "lintfix": "eslint --fix .",
+    "list": "npm-packlist-cli",
+    "prettier": "prettier",
+    "pub": "npm publish --access public"
   }
 }
