--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "dist/"
   ],
   "scripts": {
-    "test": "gulp test",
+    "test": "karma start karma.conf.js",
+    "test-ci": "karma start karma.conf.ci.js",
     "build": "gulp dist",
     "lint": "eslint .",
     "lintfix": "eslint --fix .",
